<resources>
    <string name="app_name">HealthM8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HealthM8</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Citas médicas</string>
    <string name="menu_gallery">Medicamentos</string>
    <string name="menu_detalles_citas">Detalles cita</string>
    <string name="action_eliminarCredenciales">Eliminar Credenciales</string>
    <string name="action_eliminarUsuario">Eliminar Usuario</string>

    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_repeat">Escriba de nuevo la contraseña</string>
    <string name="texto_credenciales">¿Guardar credenciales?</string>
    <string name="boton_acceder">Acceder</string>
    <string name="boton_regristrarse">Registrarse</string>

    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>

    <string name="boton_nuevo">+</string>

    <!-- Nueva cita -->
    <string name="hint_fecha">Escriba la fecha: dd/mm/yyyy</string>
    <string name="hint_hora">Escriba la hora: HH:mm</string>
    <string name="hint_lugar">Escriba el lugar de la cita</string>
    <string name="hint_nombreMedico">Escriba el nombre del médico</string>
    <string name="esOnline">¿Es online?</string>
    <string name="esTelefonica">¿Es telefónica?</string>
    <string name="boton_recodatorioCita">Recordatorio</string>

    <!-- Detalles cita -->
    <string name="especialidad">Especialidad: </string>

    <string name="channel_name">Nombre del Canal</string>
    <string name="channel_description">Descripción del Canal</string>

    <!-- Nuevo Medicamento -->
    <string name="hint_nombreMedicamento">Escriba el nombre del medicamento</string>
    <string name="hint_numeroPastillas">Escriba el número de pastillas por toma</string>
    <string name="hint_toma">Escriba el número de tomas</string>
    <string name="hint_fechaInicio">Fecha inicio tratamiento: dd/mm/yyyy</string>
    <string name="hint_fechaFin">Fecha fin tratamiento: dd/mm/yyyy</string>
    <string name="hint_fechaRenovacionReceta">Fecha renovación receta: dd/mm/yyyy</string>

</resources>