<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/hint_fecha"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editTextHora"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/hint_hora"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/editTextFecha"
        app:layout_constraintStart_toStartOf="@+id/editTextFecha"
        app:layout_constraintTop_toBottomOf="@+id/editTextFecha" />

    <EditText
        android:id="@+id/editTextLugar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/hint_lugar"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextHora"
        app:layout_constraintStart_toStartOf="@+id/editTextHora"
        app:layout_constraintTop_toBottomOf="@+id/editTextHora" />

    <EditText
        android:id="@+id/editTextNombreMedico"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/hint_nombreMedico"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/editTextLugar"
        app:layout_constraintStart_toStartOf="@+id/editTextLugar"
        app:layout_constraintTop_toBottomOf="@+id/editTextLugar" />

    <CheckBox
        android:id="@+id/checkBox_esOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/esOnline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreMedico"
        app:layout_constraintVertical_bias="0.047" />

    <CheckBox
        android:id="@+id/checkBox_esTelefonica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/esTelefonica"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox_esOnline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox_esOnline"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>